style.css
@import url('https://fonts.googleapis.com/css2?family=PT+Serif&display=swap');

* {
    box-sizing: border-box;
    padding: 0;
    margin: 0;
}

body {
    font-family: 'PT Serif', serif;
    min-height: 100vh;
    background-color: #1f1f1f !important;
    overflow-x: hidden;
}

/* General class rules */

.highlight {
    font-weight: 600;
}

.icon {
    margin-left: 5px;
}

/*===============Nav Menu============*/
.topbar {
    position: relative;
    display: block;
    float: left;
    width: 100%;
}

.logo-container {
    position: relative;
    display: block;
    float: left;
    padding: 10px;
}

.navigation {
    position: relative;
    display: block;
    float: right;
    padding: 10px;
}

.logo a {
    color: #fff;
}

/*==========Social Media Icons and hover===========*/

.nav-links {
    font-weight: 500;
}

.nav-links a {
    text-decoration: none;
    color: #1c1c1c;
    font-weight: 500;
    color: #fff;
}

.cv-btn {
    background: linear-gradient(to top, #103ce7, #64e9ff);
    color: #fff;
    border: none;
    padding: 10px;
    border-radius: 30px;
}

.cv-btn:hover {
    box-shadow: 10px 10px 10px 0 rgba(49, 196, 190, 0.8);
}

.nav-links li {
    display: inline-block;
    position: relative;
    color: #0087ca;
    margin: 0 10px;
}

.nav-links li:after {
    content: '';
    position: absolute;
    width: 100%;
    transform: scaleX(0);
    height: 2px;
    bottom: 0;
    left: 0;
    background-color: #00a9fd;
    transform-origin: bottom center;
    transition: transform 0.25s ease-out;
}

.nav-links li:hover::after {
    transform: scaleX(1);
    transform-origin: bottom center;
}

/*================= Introduction ================*/

.intro-row {
    background: linear-gradient(rgba(0, 0, 0, 0.527), rgba(0, 0, 0, 0.5)), url('images/main-img.jpg') no-repeat center center fixed;
    -webkit-background-size: cover;
    -moz-background-size: cover;
    -o-background-size: cover;
    background-size: cover;
    min-height: 100vh;
}

.introduction-container {
    display: flex;
    flex-direction: column;
    justify-content: center;
    position: absolute;
    top: 35%;
    color: #fff;
    width: fit-content;
}

.name {
    font-size: 60px;
}

.title {
    color: #dddddd;
    font-size: 40px;
}

/* ==============About Me Section=============== */

.about-me {
    background: linear-gradient(rgba(0, 0, 0, 0.527), rgba(0, 0, 0, 0.5)), url('images/about-me-img.jpg') no-repeat center center fixed;
    -webkit-background-size: cover;
    -moz-background-size: cover;
    -o-background-size: cover;
    background-size: cover;
    min-height: 100vh;
    position: relative;
}

#about {
    font-size: 2rem;
}

.about-container {
    display: flex;
    flex-direction: column;
    justify-content: center;
    position: absolute;
    top: 30%;
    width: 40%;
    right: 10%;
    color: #fff;
    font-size: 1.2rem;
}

.about-para a {
    color: #00a9fd;
}

/*==========Projects Button, Icon and hover===========*/
.projects-btn {
    background: linear-gradient(to top, #103ce7, #64e9ff);
    color: #fff;
    border: none;
    padding: 10px;
    border-radius: 30px;
    transition: all 0.3s ease;
    font-size: 20px;
}

.projects-btn:hover {
    box-shadow: 10px 10px 10px 0 rgba(49, 196, 190, 0.8);
    transform: scale(1.15);
}

/*====================Skills Section=======================*/

.skills-section {
    background: linear-gradient(rgba(0, 0, 0, 0.527), rgba(0, 0, 0, 0.7)), url('images/skills-img.jpg') no-repeat center center fixed;
    -webkit-background-size: cover;
    -moz-background-size: cover;
    -o-background-size: cover;
    background-size: cover;
    min-height: 100vh;
    position: relative;
}

#skills {
    font-size: 2rem;
}

.skills-circle-wrapper {
    display: block;
    text-align: center;
    margin: auto;
}

.skills-circle {
    width: 100px;
    height: 100px;
    border-radius: 50%;
    border: 2px solid #fff;
    margin-left: 50%;
    transform: translate(-50%);
    display: flex;
    align-items: center;
    justify-content: center;
    margin-bottom: 30px;
}

.skills-circle i {
    font-size: 50px;
}

.skills-header {
    font-size: 25px;
}

.skills-list-group {
    padding: 0;
    font-size: 20px;
}

.skills-list-group li {
    display: inline-block;
}

.personal-skills {
    display: flex;
    justify-content: center;
    margin-top: 100px;
}

/*=============Experience Section==============*/

.experience-section {
    background: linear-gradient(rgba(0, 0, 0, 0.527), rgba(0, 0, 0, 0.7)), url('images/code-background.jpg') no-repeat center center fixed;
    -webkit-background-size: cover;
    -moz-background-size: cover;
    -o-background-size: cover;
    background-size: cover;
    min-height: 100vh;
    position: relative;
    color: #fff;
    display: flex;
    justify-content: space-around;
}

.language-list-group, .hobby-list-group, .education-list-group {
  text-align: left;
  list-style: none;
}

.language-list-item, .hobby-list-item, .education-list-item {
    padding: 5px 0;
}

/*================Timeline Style================*/
  .d-flex-2 {
    display: flex;
    align-items: center;
  }
  .all-timelines {
    position: relative;
  }
    h5 {
    font-weight: 600;
    font-size: 1.5rem;
    margin-bottom: 40px;
  }
  .all-timelines::before {
    content: "";
    position: absolute;
    left: 0;
    right: 0;
    margin: auto;
    height: 100%;
    width: 2px;
    background: #efa22f;
    top: 20px;
  }
  .single-timeline {
    margin-bottom: 22px;
  }
  .timeline-blank {
    width: 50%;
  }
  .timeline-text {
    width: 50%;
    padding-left: 30px;
    -webkit-box-sizing: border-box;
    box-sizing: border-box;
    position: relative;
  }
  .timeline-text h6 {
    color: #f0f1f2;
    font-weight: 900;
    display: inline-block;
    font-size: 1rem;
  }
  .timeline-text span {
    color: #f0f1f2;
    display: block;
    width: 100%;
  }
  .single-timeline:nth-child(even) .timeline-text span {
    text-align: right;
  }
  .t-square {
    content: "";
    position: absolute;
    width: 12px;
    height: 12px;
    left: -6px;
    background: #efa22f;
  }
  .single-timeline:nth-child(even) {
    -webkit-box-orient: horizontal;
    -webkit-box-direction: reverse;
    -ms-flex-direction: row-reverse;
    flex-direction: row-reverse;
  }
  .single-timeline:nth-child(even) .t-square {
    right: -6px;
    left: unset;
  }
  .single-timeline:nth-child(even) .timeline-text {
    padding-left: 0;
    padding-right: 30px;
    text-align: right;
  }

  /*===========Projects Section============*/

  .project-section {
    background: linear-gradient(rgba(0, 0, 0, 0.527), rgba(0, 0, 0, 0.7)), url('images/pattern.jpg') no-repeat center center fixed;
    -webkit-background-size: cover;
    -moz-background-size: cover;
    -o-background-size: cover;
    background-size: cover;
    min-height: 100vh;
    position: relative;
    display: flex;
    flex-direction: column;
    justify-content: center;
    color: #fff;
  }

  #carousel {
    position: relative;
    max-width: 900px;
    margin: auto;
  }

  #carousel .arrow {
    position: absolute;
    top: 50%;
    display: flex;
    justify-content: center;
    align-items: center;
    width: 45px;
    height: 45px;
    border-radius: 50%;
    z-index: 1;
    font-size: 26px;
    color: #fff;
    background: #00000072;
    cursor: pointer;
  }

  #carousel #prev {
    left: 0px;
  }

  #carousel #next {
    right: 0px;
  }

  #carousel-vp {
    width: 770px;
    height: 400px;
    display: flex;
    align-items: center;
    position: relative;
    overflow: hidden;
    margin: auto;
  }


  
  @media all and (max-width: 991px) {
  }
  @media all and (max-width: 768px) {
    .all-timelines::before {
      right: unset;
      top: 0;
    }
    .single-timeline:nth-child(2n) .timeline-text {
      padding-left: 30px;
      padding-right: 0;
      text-align: left;
    }
    .single-timeline:nth-child(2n) .t-square {
      left: -6px;
      right: unset;
    }
    .timeline-blank {
      display: none;
    }
    .timeline-text {
      width: 100%;
    }
    .single-timeline:nth-child(even) .timeline-text span {
      text-align: left !important;
    }

    #carousel-vp {
      width: 510px;
    }
  }

  @media all and (max-width: 510px) {
    #carousel-vp {
      width:250px;
    }

    #carousel #carousel-inner {
      display: flex;
      position: absolute;
      transition: 0.3s ease-in-out;
      gap: 10px;
      left: 0px;
    }

    #carousel-item {
      width: 250px;
      height: 365px;
      border: 2px solid white;
      border-radius: 15px;
      overflow: hidden;
      display: flex;
      flex-direction: column;
    }

    .carousel-item img {
      width: 100%;
      object-fit: cover;
      min-height: 246px;
      color: #fff;
    }

    .cCarousel-item .infos {
      height: 100%;
      display: flex;
      flex-direction: column;
      align-items: center;
      justify-content: space-around;
      background: white;
      color: black;
    }
    
    .cCarousel-item .infos button {
      background: #222;
      padding: 10px 30px;
      border-radius: 15px;
      color: white;
      font-size: 1rem;
      font-weight: bold;
      cursor: pointer;
    }
  }

  @media all and (max-width: 360px) {
    .all-timelines::before {
      top: 32px;
    }
  }

